# CoinCraft

./: .gitignore  HANDOVER_REPORT.txt  NETWORK_ERROR_FIXES.md  README.md  backend_endpoint.md  coincraft.db  database_structure.md  docker-compose.yaml  frontend_store_connection_with_backend.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
backend/: .dockerignore  .env.production  DEPLOYMENT.md  Dockerfile  README.md  __init__.py  auth.py  coincraft.db  coincraft.service  database.py  deploy.sh  gunicorn.conf.py  main.py  migrate_add_module_assignment_fields.py  migrate_remove_class_code_unique.py  models.py  nginx-coincraft-api.conf  pyproject.toml  quick-fix.sh  requirements.txt  schemas.py  seed_data.py  seed_users.bat  seed_users.py  swagger.yaml  test_backend.py
backend/routers/: __init__.py  auth.py  child.py  classes.py  dashboard.py  goals.py  modules.py  parent.py  redemptions.py  shop.py  tasks.py  teacher.py  teen.py  transactions.py  users.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_child.py  test_classes.py  test_dashboard.py  test_goals.py  test_modules.py  test_parent.py  test_redemptions.py  test_shop.py  test_tasks.py  test_teacher.py  test_teen.py  test_transactions.py  test_users.py
frontend/: .dockerignore  .env.production  .env_example  .eslintrc.js  API_INTEGRATION_README.md  CORS_FIXES_APPLIED.md  DEBUG_GUIDE.md  Dockerfile  README.md  SETUP_INSTRUCTIONS.md  eslint.config.js  index.html  package-lock.json  package.json  test-api.html  test_ai.html  tsconfig.app.json  tsconfig.json  vercel.json  (+2 more)
(+82 files in other folders)
